--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 /.pnp
 .pnp.js
 
+
+/public/videos/
+
+
 # testing
 /coverage
 
@@ -17,7 +21,7 @@
 
 # misc
 .DS_Store
-/public/
+public
 # debug
 npm-debug.log*
 yarn-debug.log*
