--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@phuocng/react-pdf-viewer": "^1.7.0",
     "array-move": "^4.0.0",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "ionicons": "^5.5.3",
     "next": "^11.0.0",
@@ -17,8 +18,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-medium-image-zoom": "^4.3.5",
     "react-photo-gallery": "^8.0.0",
     "react-responsive-carousel": "^3.2.21",
-    "react-sortable-hoc": "^2.0.0"
+    "react-sortable-hoc": "^2.0.0",
+    "react-vertical-timeline-component": "^3.5.2"
   }
 }
