--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "array-move": "^4.0.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "emailjs": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "ionicons": "^5.5.3",
     "next": "^11.0.0",
     "pdfjs-dist": "^2.6.347",
@@ -21,6 +23,7 @@
     "react-medium-image-zoom": "^4.3.5",
     "react-photo-gallery": "^8.0.0",
     "react-responsive-carousel": "^3.2.21",
+    "react-safe": "^1.3.0",
     "react-sortable-hoc": "^2.0.0",
     "react-vertical-timeline-component": "^3.5.2"
   }
