--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write \"./**/*.{js,jsx,json}\""
   },
   "dependencies": {
     "@phuocng/react-pdf-viewer": "^1.7.0",
@@ -20,6 +21,7 @@
     "ionicons": "^5.5.3",
     "next": "^11.0.0",
     "pdfjs-dist": "^2.6.347",
+    "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
