--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,10 @@ jobs:
           echo NEXT_PUBLIC_ACCESS_TOKEN = ${{secrets.accessToken}} >> .env
           echo NEXT_PUBLIC_GRAPH_URL = ${{secrets.graphURL}} >> .env
           echo "!.env" > .git-ftp-include # Add git untracked file
-
+      - name: 🔨 Build Project
+        run: |
+          npm install
+          npm run build
       - name: 📂 Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@4.2.0
         with:
